
PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-2769 a simple logic causes very long compiling time on pig 0.10.0 (nwhite via gates)

PIG-2251: PIG leaks Zookeeper connections when using HBaseStorage (jamarkha via cheolsoo)

PIG-3112: Errors and lacks in document "User Defined Functions" (miyakawataku via cheolsoo)

PIG-3050: Fix FindBugs multithreading warnings (cheolsoo)

PIG-3066: Fix TestPigRunner in trunk (cheolsoo)

PIG-3101: Increase io.sort.mb in YARN MiniCluste (cheolsoo)

PIG-3100: If a .pig_schema file is present, can get an index out of bounds error (jcoveney)

PIG-3096: Make PigUnit thread safe (cheolsoo)

PIG-3095: "which" is called many, many times for each Pig STREAM statement (nwhite via cheolsoo)

PIG-3085: Errors and lacks in document "Built In Functions" (miyakawataku via cheolsoo)

PIG-3084: Improve exceptions messages in POPackage (julien)

PIG-3072: Pig job reporting negative progress (knoguchi via rohini)

PIG-3014: CurrentTime() UDF has undesirable characteristics (jcoveney via cheolsoo)

PIG-2924: PigStats should not be assuming all Storage classes to be file-based storage (cheolsoo)

PIG-3046: An empty file name in -Dpig.additional.jars throws an error (prkommireddi via cheolsoo)

PIG-2989: Illustrate for Rank Operator (xalan via gates)

PIG-2885: TestJobSumission and TestHBaseStorage don't work with HBase 0.94 and ZK 3.4.3 (cheolsoo via sms)

PIG-2928: Fix e2e test failures in trunk: FilterBoolean_23/24 (cheolsoo via dvryaboy)

Release 0.11.0 (unreleased)

INCOMPATIBLE CHANGES

PIG-3034: Remove Penny code from Pig repository (gates via cheolsoo)
