@@ -525,6 +525,11 @@
             <path refid="mr-apps-test-ivy.classpath"/>
         </path>
         <property name="mr-apps-classpath" refid="mr-apps-test.classpath" />
+        <!-- Remove jython jar from mrapp-generated-classpath -->
+        <script language="javascript">
+          project.setProperty('mr-apps-classpath', project.getProperty('mr-apps-classpath').
+           replace(":" + project.getProperty('ivy.default.ivy.user.dir') + "/cache/org.python/jython-standalone/jars/jython-standalone-2.5.2.jar", ""));
+        </script>
         <echo file="${test.build.classes}/mrapp-generated-classpath" message="${mr-apps-classpath}" />
     </target>
 
